<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/info_icon"
            android:menuCategory="secondary"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/pd"
            android:icon="@drawable/info_icon"
            android:menuCategory="secondary"
            android:title="@string/personal_details" />
        <item
            android:id="@+id/education"
            android:icon="@drawable/info_icon"
            android:menuCategory="secondary"
            android:title="@string/education" />
        <item
            android:id="@+id/sae"
            android:icon="@drawable/info_icon"
            android:menuCategory="secondary"
            android:title="@string/skills_and_expertise" />
        <item
            android:id="@+id/exp"
            android:menuCategory="secondary"
            android:icon="@drawable/info_icon"
            android:title="@string/experience" />
<!--        <item-->
<!--            android:id="@+id/portfolio"-->
<!--            android:icon="@drawable/info_icon"-->
<!--            android:menuCategory="secondary"-->
<!--            android:title="@string/portfolio" />-->
    </group>
</menu>